--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -13,6 +13,9 @@
     "@bull-board/express": "^6.14.1",
     "@bull-board/ui": "^6.14.1",
     "@prisma/client": "6.19.0",
+    "@remotion/bundler": "^4.0.379",
+    "@remotion/cli": "4.0.379",
+    "@remotion/renderer": "^4.0.379",
     "axios": "^1.7.0",
     "body-parser": "^2.2.0",
     "bullmq": "^5.6.0",
