--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -27,9 +27,24 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libgtk-3-dev \
     libboost-all-dev \
     ffmpeg \
+    libnss3 \
+    libdbus-1-3 \
+    libatk1.0-0 \
+    libgbm-dev \
+    libasound2 \
+    libxrandr2 \
+    libxkbcommon-dev \
+    libxfixes3 \
+    libxcomposite1 \
+    libxdamage1 \
+    libatk-bridge2.0-0 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libcups2 \
     && ln -sf /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
+
 
 COPY  pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
 COPY  apps/background-jobs/package.json ./apps/background-jobs/
@@ -78,9 +93,24 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libgtk-3-dev \
     libboost-all-dev \
     ffmpeg \
+    libnss3 \
+    libdbus-1-3 \
+    libatk1.0-0 \
+    libgbm-dev \
+    libasound2 \
+    libxrandr2 \
+    libxkbcommon-dev \
+    libxfixes3 \
+    libxcomposite1 \
+    libxdamage1 \
+    libatk-bridge2.0-0 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libcups2 \
     && ln -sf /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
+
 
 
 COPY --from=builder  /app /app
@@ -90,6 +120,10 @@ ENV NODE_ENV=production \
     VIRTUAL_ENV="/app/.venv" 
 
 RUN  pnpm --filter background-jobs build
+
+WORKDIR /app/packages/remotion
+
+RUN npx remotion browser ensure
 
 WORKDIR /app/
 
