--- a/docker/Dockerfile.background-jobs.dev
+++ b/docker/Dockerfile.background-jobs.dev
@@ -27,6 +27,20 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libgtk-3-dev \
     libboost-all-dev \
     ffmpeg \
+    libnss3 \
+    libdbus-1-3 \
+    libatk1.0-0 \
+    libgbm-dev \
+    libasound2 \
+    libxrandr2 \
+    libxkbcommon-dev \
+    libxfixes3 \
+    libxcomposite1 \
+    libxdamage1 \
+    libatk-bridge2.0-0 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libcups2 \
     && ln -sf /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
@@ -36,6 +50,7 @@ COPY  apps/background-jobs/package.json ./apps/background-jobs/
 COPY  apps/web/package.json ./apps/web/
 COPY  packages/shared/package.json ./packages/shared/
 COPY  packages/prisma ./packages/prisma/
+COPY  packages/remotion/package.json ./packages/remotion/
 
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
     pnpm install --frozen-lockfile
@@ -78,6 +93,20 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libgtk-3-dev \
     libboost-all-dev \
     ffmpeg \
+    libnss3 \
+    libdbus-1-3 \
+    libatk1.0-0 \
+    libgbm-dev \
+    libasound2 \
+    libxrandr2 \
+    libxkbcommon-dev \
+    libxfixes3 \
+    libxcomposite1 \
+    libxdamage1 \
+    libatk-bridge2.0-0 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libcups2 \
     && ln -sf /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
@@ -90,6 +119,10 @@ ENV NODE_ENV=production \
     VIRTUAL_ENV="/app/.venv" 
 
 RUN  pnpm --filter background-jobs build
+
+WORKDIR /app/packages/remotion
+
+RUN npx remotion browser ensure
 
 WORKDIR /app/
 
