fix: minor bug fixes

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
       - whisper-models:/app/models:rw
       - yolo-models:/app/models/yolo:rw
+      - ../data:/app/data
 
   web:
     build:
@@ -55,6 +56,7 @@ services:
       - .env.system
     volumes:
       - ${HOST_MEDIA_PATH:-./media}:/media/videos:ro
+      - ../data:/app/data
     networks:
       - app-network
 
@@ -67,7 +69,7 @@ services:
     ports:
       - "${CHROMA_PORT:-8000}:8000"
     volumes:
-      - chroma-data:/chroma/chroma
+      - ../.chroma_db:/data
     networks:
       - app-network
 
@@ -118,6 +120,5 @@ volumes:
     driver: local
   chroma-data:
     driver: local
-
 networks:
   app-network:
