--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -2,14 +2,14 @@
   "name": "desktop",
   "version": "0.1.1",
   "description": "AI-Powered Video Indexing and Search",
-  "main": "./out/main/main.js",
+  "main": "./dist/main.js",
   "license": "MIT",
   "author": {
     "name": "ilias",
     "url": "https://github.com/iliashad"
   },
   "scripts": {
-    "dev": "pnpm run build:shared && cross-env ELECTRON_DISABLE_SANDBOX=1 electron-vite dev -w",
+    "dev": "cross-env ELECTRON_DISABLE_SANDBOX=1 electron-vite dev -w --config electron.vite.config.ts",
     "format": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --fix",
     "start": "electron-vite preview",
