--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -1,36 +1,34 @@
 ARG NODE_VERSION=22.20.0
-ARG PNPM_VERSION=10.20.0
+ARG PNPM_VERSION=10.13.1
+ARG CUDA_VERSION=12.4.1
 
-FROM node:${NODE_VERSION}-bookworm-slim AS base
+# Use NVIDIA CUDA base image for GPU support
+FROM nvidia/cuda:${CUDA_VERSION}-cudnn-runtime-ubuntu22.04 AS base
 
+ARG NODE_VERSION
 ARG PNPM_VERSION
 
-ENV PNPM_HOME="/pnpm" 
+# Install Node.js
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
+    ca-certificates \
+    && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
+    && apt-get install -y nodejs \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
+ENV NPM_CONFIG_NODE_LINKER=hoisted
 RUN corepack enable && corepack prepare pnpm@${PNPM_VERSION} --activate
 
 WORKDIR /app
 
-RUN mkdir -p /app/models /app/models/yolo /tmp
+RUN mkdir -p /app/models /app/models/yolo /tmp 
 
-
-
-FROM base AS node-deps
-
-COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
-COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY apps/web/package.json ./apps/web/
-COPY packages/shared/package.json ./packages/shared/
-COPY packages/prisma ./packages/prisma/
-
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --frozen-lockfile 
-
-
-FROM base AS python-deps
+FROM base AS dependencies
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3=3.11.* \
+    python3 \
     python3-venv \
     python3-pip \
     build-essential \
@@ -45,63 +43,69 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
+COPY  pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts .npmrc ./
+COPY  apps/background-jobs/package.json ./apps/background-jobs/
+COPY  apps/web/package.json ./apps/web/
+COPY  packages/shared/package.json ./packages/shared/
+COPY  packages/prisma ./packages/prisma/
 
-RUN python3 -m venv /app/.venv
-ENV PATH="/app/.venv/bin:$PATH" \
-    VIRTUAL_ENV="/app/.venv"
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
+    pnpm install
 
-COPY python/requirements.txt ./python/
+FROM dependencies AS python-deps
+
+COPY  python/requirements.txt ./python/
+
+RUN python3 -m venv /app/.venv 
+
+ENV PATH="/app/.venv/bin:$PATH"
+ENV VIRTUAL_ENV="/app/.venv"
 
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install --upgrade pip setuptools wheel
+    pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -r python/requirements.txt
 
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install face-recognition
+FROM python-deps AS builder
 
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install -r python/requirements.txt 
-
-
-FROM node-deps AS builder
-
-COPY --from=node-deps ./app/node_modules /app/node_modules
-COPY apps ./apps
-COPY packages ./packages
-COPY python ./python
-COPY tsconfig.json ./
+COPY  apps ./apps
+COPY  packages ./packages
+COPY  python ./python
+COPY  tsconfig.json ./
 
 RUN pnpm rebuild @tailwindcss/oxide rollup sharp
-RUN pnpm --filter shared build
+
 RUN pnpm --filter background-jobs build
 
 FROM base AS production
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3=3.11.* \
+    python3 \
     python3-venv \
-    libopenblas0 \
-    liblapack3 \
-    libx11-6 \
-    libgtk-3-0 \
-    libboost-python1.74.0 \
-    libboost-thread1.74.0 \
-    libboost-filesystem1.74.0 \
+    python3-pip \
+    build-essential \
+    cmake \
+    libopenblas-dev \
+    liblapack-dev \
+    libx11-dev \
+    libgtk-3-dev \
+    libboost-all-dev \
     ffmpeg \
-    libsm6 \
-    libxext6 \
-    libxrender1 \
-    libgomp1 \
     && ln -sf /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
-COPY --from=builder /app /app
-COPY --from=python-deps  ./app/.venv  /app/.venv
-COPY --from=python-deps  ./app/python  /app/python
+# Set CUDA environment variables
+ENV NVIDIA_VISIBLE_DEVICES=all
+ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility
+
+
+COPY --from=builder  /app /app
 
 ENV NODE_ENV=production \
     PATH="/app/.venv/bin:$PATH" \
-    VIRTUAL_ENV="/app/.venv"
+    VIRTUAL_ENV="/app/.venv" 
+
+RUN  pnpm --filter background-jobs build
 
 WORKDIR /app/
 
@@ -115,11 +119,33 @@ CMD ["sh", "-c", "\
 "]
 
 
-FROM builder AS development
+FROM base AS development
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 \
+    python3-venv \
+    python3-pip \
+    build-essential \
+    cmake \
+    libopenblas-dev \
+    liblapack-dev \
+    libx11-dev \
+    libgtk-3-dev \
+    libboost-all-dev \
+    ffmpeg \
+    && ln -sf /usr/bin/python3 /usr/bin/python \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+ENV NVIDIA_VISIBLE_DEVICES=all
+ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility
+
+
+COPY --from=builder  /app /app
 
 ENV NODE_ENV=development \
     PATH="/app/.venv/bin:$PATH" \
-    VIRTUAL_ENV="/app/.venv"
+    VIRTUAL_ENV="/app/.venv" 
 
 RUN  pnpm --filter background-jobs build
 
