--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -25,13 +25,13 @@
   },
   "dependencies": {
     "@prisma/client": "6.19.0",
-    "bcryptjs": "^2.4.3"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^22.0.0",
+    "bcryptjs": "^2.4.3",
     "prisma": "6.19.0",
     "ts-node": "^10.9.2",
     "typescript": "5.9.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^22.0.0"
   }
 }
