fix: GPU acceleration, watcher hardening, analysis path
- Enable CUDA 12.4 PyTorch for GPU transcription/analysis
- Add face_recognition + dlib dependencies
- Harden file watchers: depth limit, Syncthing/temp ignores, audio support
- Fix analysis result path mismatch (/app/apps/background-jobs/)
- Add start.ps1/stop.ps1 to gitignore (contain GPU_COUNT)

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "${BACKGROUND_JOBS_PORT:-4000}:4000"
       - "${BACKGROUND_JOBS_WS_PORT:-8765}:8765"
-    # Optional GPU acceleration
+    # Optional GPU acceleration (set GPU_COUNT=-1 for all GPUs, or specific count)
     deploy:
       resources:
         reservations:
