--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -3,10 +3,10 @@ opencv-python>=4.8.0
 numpy>=1.24.0,<2.0.0
 tqdm>=4.66.0
 
-# ML/AI frameworks (CPU ONLY)
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.1.0
-torchvision==0.16.0
+# ML/AI frameworks with CUDA 12.4 support
+--extra-index-url https://download.pytorch.org/whl/cu124
+torch>=2.5.0
+torchvision>=0.20.0
 
 --index-url https://pypi.org/simple
 # Emotion detection (optional - can be heavy)
@@ -22,6 +22,10 @@ scikit-learn>=1.3.0
 # OCR
 easyocr>=1.7.0
 Pillow>=9.3.0
+
+# Face recognition
+face_recognition>=1.3.0
+dlib>=19.24.0
 
 # Monitoring
 psutil>=5.9.0
