--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,11 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service.name }}
           tags: |
             type=raw,value=latest-${{ steps.platform-tag.outputs.tag }},enable={{is_default_branch}}
-            type=sha,prefix={{branch}}-${{ steps.platform-tag.outputs.tag }}-
+
+            type=sha,prefix={{branch}}-${{ steps.platform-tag.outputs.tag }}-,enable={{is_default_branch}}
+
+            type=sha,prefix={{tag}}-${{ steps.platform-tag.outputs.tag }}-,enable={{is_tag}}
+
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@v6
