--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -30,18 +30,14 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
 FROM base AS python-deps
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3=3.11.* \
     python3-venv \
     python3-pip \
     ffmpeg \
-    cmake \
     build-essential \
-    libboost-all-dev \
+    cmake \
     libopenblas-dev \
     liblapack-dev \
-    && ln -sf /usr/bin/python3 /usr/bin/python \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m venv /app/.venv
 ENV PATH="/app/.venv/bin:$PATH" \
@@ -50,8 +46,11 @@ ENV PATH="/app/.venv/bin:$PATH" \
 COPY python/requirements.txt ./python/
 
 RUN --mount=type=cache,target=/root/.cache/pip \
-       pip install -r python/requirements.txt
-
+    pip install --upgrade pip && \
+    pip install -r python/requirements.txt && \
+    pip cache purge && \
+    apt-get purge -y --auto-remove build-essential cmake libopenblas-dev liblapack-dev
+    
 FROM node-deps AS builder
 
 COPY --from=node-deps ./app/node_modules /app/node_modules
@@ -67,23 +66,12 @@ RUN pnpm --filter background-jobs build
 FROM base AS production
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3=3.11.* \
     python3-venv \
     libopenblas0 \
     liblapack3 \
-    libx11-6 \
-    libgtk-3-0 \
-    libboost-python1.74.0 \
-    libboost-thread1.74.0 \
-    libboost-filesystem1.74.0 \
     ffmpeg \
-    libsm6 \
-    libxext6 \
-    libxrender1 \
-    libgomp1 \
-    && ln -sf /usr/bin/python3 /usr/bin/python \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    libx11-6 libgtk-3-0 libsm6 libxext6 libxrender1 libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY --from=python-deps /app/.venv /app/.venv
 COPY --from=builder /app/python /app/python
@@ -114,29 +102,21 @@ FROM builder AS development
 
 COPY --from=python-deps /app/.venv /app/.venv
 COPY --from=python-deps /app/python /app/python
+COPY python/requirements-dev.txt ./python/
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3=3.11.* \
     python3-venv \
     libopenblas0 \
     liblapack3 \
-    libx11-6 \
-    libgtk-3-0 \
-    libboost-python1.74.0 \
-    libboost-thread1.74.0 \
-    libboost-filesystem1.74.0 \
     ffmpeg \
-    libsm6 \
-    libxext6 \
-    libxrender1 \
-    libgomp1 \
-    && ln -sf /usr/bin/python3 /usr/bin/python \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    libx11-6 libgtk-3-0 libsm6 libxext6 libxrender1 libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
 
 ENV NODE_ENV=development \
     PATH="/app/.venv/bin:$PATH" \
     VIRTUAL_ENV="/app/.venv"
+
+RUN pip install -r python/requirements-dev.txt
 
 RUN pnpm --filter background-jobs build
 
