--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -16,25 +16,21 @@ Pillow>=9.3.0
 # Monitoring
 psutil>=5.9.0
 
-# Websockets 
+# Websockets
 websockets>=12.0
 python-multipart>=0.0.6
 
-# Testing
-pytest
-coverage>=7.11.0
-
+# Environment
 python-dotenv>=1.2.1
 
 # ML/AI frameworks (CPU ONLY)
 --extra-index-url https://download.pytorch.org/whl/cpu
-
-# Face recognition
-deepface>=0.0.96
-tf_keras
-
 torch>=2.1.0
 torchvision>=0.16.0
+
+# Face recognition (PyTorch backend)
+deepface>=0.0.96
+
 ultralytics>=8.0.0
 transformers>=4.35.0
 --index-url https://pypi.org/simple
