--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           python-version: '3.11'
 
+      - run: df -h
+      - name: "node-cleanup"
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker builder prune -a
+      - run: df -h
       - name: Install system dependencies
         run: |
           sudo apt-get update
