--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -61,6 +61,7 @@ COPY --from=builder /app/pnpm-workspace.yaml ./
 COPY --from=builder /app/pnpm-lock.yaml ./
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/prisma.config.ts ./
+COPY --from=builder /app/tsconfig.json ./
 COPY --from=builder /app/.npmrc ./
 
 COPY --from=builder /app/apps/web/package.json ./apps/web/
@@ -120,3 +121,39 @@ CMD ["sh", "-c", "\
   pnpm --filter prisma seed && \
   pnpm --filter web dev --host 0.0.0.0 --port 3745  \
 "]
+
+
+
+FROM base AS testing
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    openssl \
+    ca-certificates \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+COPY --from=builder /app/pnpm-workspace.yaml ./
+COPY --from=builder /app/pnpm-lock.yaml ./
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/prisma.config.ts ./
+COPY --from=builder /app/tsconfig.json ./
+COPY --from=builder /app/.npmrc ./
+
+COPY --from=builder /app/apps/web/package.json ./apps/web/
+COPY --from=builder /app/apps/background-jobs/package.json ./apps/background-jobs/
+COPY --from=builder /app/packages/shared/package.json ./packages/shared/
+COPY --from=builder /app/packages/prisma/package.json ./packages/prisma/
+COPY --from=builder /app/packages/prisma/schema.prisma ./packages/prisma
+
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
+    pnpm install --frozen-lockfile --prod=false
+
+COPY --from=builder /app/packages/prisma ./packages/prisma
+COPY --from=builder /app/packages/shared ./packages/shared
+COPY --from=builder /app/apps/web ./apps/web
+
+
+ENV NODE_ENV=testing
+RUN pnpm --filter shared test tests/services/vectorDb.test.ts tests/services/modelRouter.test.ts
