--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -145,11 +145,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 
 COPY --from=python-deps /app/.venv /app/.venv
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/uv
 COPY python/requirements.txt ./python/
 COPY python/.faces ./python/
 
-RUN  VIRTUAL_ENV=/app/.venv uv pip install --no-cache -r python/requirements.txt
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install pytest pytest-mock
 
 ENV NODE_ENV=testing VIRTUAL_ENV="/app/.venv" PATH="/app/.venv/bin:$PATH"
 
