--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -17,6 +17,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     openssl \
     ca-certificates \
     curl \
+    python3 \
     && rm -rf /var/lib/apt/lists/*
 
 COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts .npmrc ./
@@ -53,6 +54,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     openssl \
     ca-certificates \
     curl \
+    python3 \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
@@ -96,6 +98,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     openssl \
     ca-certificates \
     curl \
+    python3 \
     && rm -rf /var/lib/apt/lists/
 
 WORKDIR /app
@@ -130,6 +133,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     openssl \
     ca-certificates \
     curl \
+    python3 \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
