--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,23 +1,25 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "composite": true,
-    "declaration": true,
-    "sourceMap": true,
-    "declarationMap": true,
-    "rootDir": ".",
-    "esModuleInterop": true,
-    "module": "ESNext",
     "target": "ES2020",
-    "outDir": "dist",
-    "moduleResolution": "Node",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["./*"]
+      "@vector/*": ["../../packages/vector/dist/*"],
+      "@db/*": ["../../packages/db/dist/*"],
+      "@shared/*": ["./src/*"]
     }
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist", "tests", "**/*.test.ts", "**/*.spec.ts", "vitest.config.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
