--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -15,13 +15,10 @@
     "generate": "prisma generate",
     "migrate": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
-    "seed": "prisma db seed",
+    "seed": "ts-node -r tsconfig-paths/register seed.ts",
     "studio": "prisma studio",
     "format": "prisma format",
     "validate": "prisma validate"
-  },
-  "prisma": {
-    "seed": "ts-node seed.ts"
   },
   "dependencies": {
     "@prisma/client": "6.19.0",
@@ -32,6 +29,7 @@
     "@types/node": "^22.0.0",
     "prisma": "6.19.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "5.9.2"
   }
 }
