--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -7,6 +7,9 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@db/*": ["../db/src/*"]
+    }
   }
 }
